tests/string_literal_invalid_utf8.stderr
tests/string_literal_invalid_utf8.sl:2:12: error: SL1011: string literal must decode to valid UTF-8
