tests/string_literal_invalid_utf8.sl
// Verifies string literal invalid UTF-8.
const x = "\x80"
